# SW-Couriers-BE

./: .env.example  .gitignore  Dockerfile  alembic.ini  demo_data.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  quickbooks-current-future-plan.txt  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py  script.py.mako  sql_helpers.py
alembic/versions/: 0001_create_timescaledb_postgis_extensions.py  0003_create_waypoints_hypertable.py  0004_users_password_and_drop_mfa.py  0005_invites_table.py  0006_invites_flow_b.py  0007_invite_email_status.py  0009_create_user_permissions_table.py  0010_add_access_jti_to_refresh_tokens.py  0011_org_reference_and_crud.py  0012_org_extended_fields_and_contacts.py  0013_settings_pricing_tiers.py  0014_org_contacts_primary_flag.py  0015_org_logo_phone.py  0016_org_payment_config.py  0017_drop_pricing_tiers.py  0018_org_credit_suspension.py  0019_merge_alembic_heads.py  0020_normalize_driver_identity_drop_duplicate_columns.py  0021_db_sequences_for_driver_and_invoice_codes.py  0022_org_notes_and_tags.py  0023_org_on_hold_status.py  0024_driver_capacities_array.py  0025_drop_driver_capacity_column.py  0026_org_discounts.py  0027_driver_country_state.py  0028_driver_traffic_violation_proofs.py  0029_driver_drafts_pivot.py  0029_org_documents.py  0030_driver_nullable_draft_fields.py  0031_driver_drafts_backfill.py  0032_merge_org_driver_heads.py  0033_vehicle_drafts.py  0034_nullable_vehicle_fields.py  0035_org_documents_v2.py  0036_widen_org_document_type.py  0037_driver_draft_submit_marker.py  0038_route_events_and_route_code.py  0039_vehicle_draft_published_by.py  0040_org_document_shares.py  0041_doc_access.py  (+138 more)
app/: main.py  models.py  router.py
app/common/: constants.py  deps.py  exceptions.py  models.py  oauth_redirect.py  repository.py  response.py  schemas.py  service.py  types.py  (+3 more)
deploy/: raw
docs/: billing-overview-and-enhancements.md  frontend-quickbooks-and-billing-guide.md  per_org_global_suppression_plan.md  quickbooks-sync-logging.md  suspension_rules_screens_api.md
scripts/: assign_today_delivery.py  assign_today_delivery_with_return.py  assign_today_pickup.py  assign_today_pickup_with_return.py  cleanup_dev_driver_user.py  clear_qb_minimal.py  clear_route_telematics_demo.py  demo_driver_mobile.py  demo_driver_mobile_pickup_delivery.py  docker-start  driver_route_assign.py  driver_terms_content.py  fe_demo_lib.py  format  lint  migrate  run  run_demo_pickup_drive.py  seed_admin_inbox_notifications.py  seed_b2b_customer_inbox_notifications.py  seed_credit_overview_demo.py  seed_demo_actors.py  seed_demo_orders.py  seed_demo_pickup_route.py  seed_dev_driver_user.py  seed_driver_inbox_notifications.py  seed_driver_mobile_pickup_route.py  seed_driver_terms_and_conditions.py  seed_fatima_driver_timeline_demo.py  seed_fe_demo_suite.py  seed_fe_driver_schedules.py  seed_fe_order_scenarios.py  seed_frontend_org_billing_audit_demo.py  seed_org_billing_complete_demo.py  seed_qb_minimal.py  seed_qb_sync_logs_demo.py  seed_route_telematics_demo.py  seed_ryan_fatima_mobile_week.py  seed_suspension_activity_demo.py  smoke_test_emails.py  (+5 more)
tests/: conftest.py  test_health.py  test_rate_limiter_signatures.py  test_token_blacklist.py
(+591 files in other folders)
