[tool.poetry]
name = "sw-couriers-be"
version = "0.1.0"
description = "SW Couriers Backend — FastAPI modular monolith"
readme = "README.md"
authors = ["Haider Shift Opus <haider.manzoor@shiftopus.com>"]
license = "Proprietary"
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# App & API
fastapi = "^0.129.0"
uvicorn = { extras = ["standard"], version = "^0.41.0" }
pydantic = "^2.12.5"
pydantic-settings = "^2.13.0"
email-validator = "^2.3.0"
python-dotenv = "^1.2.0"
python-multipart = "^0.0.22"

# Database
sqlalchemy = { extras = ["asyncio"], version = "^2.0.46" }
asyncpg = "^0.31.0"
alembic = "^1.18.0"

# Auth & security (JWT, password hashing)
pyjwt = { extras = ["crypto"], version = "^2.12.0" }
argon2-cffi = "^23.1.0"

# Redis (cache + task queue). arq 0.27 requires redis < 6.
redis = "^5.2.0"
arq = "^0.27.0"

# Outbound HTTP (Twilio, Braintree, email, etc.)
httpx = "^0.28.0"

# Email
fastapi-mail = "1.5.0"
aiosmtplib = "3.0.2"

# HTML templating
jinja2 = "3.1.6"

# HTML sanitizer
nh3 = "^0.3.3"

# Observability (Sentry, Prometheus, structured logs)
sentry-sdk = { extras = ["fastapi"], version = "^2.19.0" }
prometheus-fastapi-instrumentator = "^7.0.0"

# Logging
structlog = "^25.5.0"

# IANA time zone database for ``zoneinfo`` (required on Windows; bundled on many Linux images)
tzdata = ">=2024.2"

# Payments
braintree = "^4.42.0"

# Storage (Cloudflare R2 — S3-compatible)
boto3 = "^1.36.0"

# PDF generation (invoice PDF from HTML)
weasyprint = "^68.0"

# Geospatial
geoalchemy2 = "^0.15.0"

# Rate limiter
slowapi = "^0.1.9"

# Session list UX (parsed User-Agent; optional MaxMind GeoLite2 City DB on disk)
user-agents = "^2.2.0"
geoip2 = "^4.8.0"

# Type checker
pyright = "^1.1.408"
gunicorn = "^25.1.0"
python-magic = { version = "^0.4.27", markers = "sys_platform != 'win32'" }
python-magic-bin = { version = "^0.4.14", markers = "sys_platform == 'win32'" }
pillow = "12.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.0"
black = "^26.1.0"
psycopg2-binary = "^2.9.11"
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 180
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 180
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # default
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Parallel runs (multi-core): poetry run pytest -n auto --dist loadscope

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:slowapi.extension",
    "ignore::DeprecationWarning:braintree.dispute",
    "ignore::DeprecationWarning:braintree.search",
]
markers = [
    "unit: fast pure-logic tests (no DB)",
    "integration: DB/ASGI/API tests (default driver suite)",
    "driver_activation: public driver deep-link flow (POST /v1/auth/driver-activation/*, X-Invite-Token)",
]
